--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "helmet": "^3.19.0",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.19.1",
+    "knex": "^0.19.4",
+    "sqlite": "^3.0.3",
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {
